--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node Backend/server.js",
     "server": "nodemon Backend/server.js"
-
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^6.5.2"
   },
   "devDependencies": {
